@@ -38,7 +38,7 @@ Configuration:
 
 Licensing:
 
-	Open-source.  See the COPYING file for details.
+	Open-source, GPL v2.  See the COPYING file for details.
 
 
 Further information:
