@@ -52,5 +52,6 @@ LB,		INS_SECONDARY,	I_LB,		NULL
 SW,		INS_SECONDARY,	I_SW,		NULL
 LW,		INS_SECONDARY,	I_LW,		NULL
 ADC,		INS_PRIMARY,	I_ADC,		NULL
+NULL,		INS_SECONDARY,	I_NULL,		NULL
 %%
 
